examples/test/testpolicy3716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3716
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key15: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value15
          key11: value4
          key15: value25
      podSelector:
        matchLabels:
          key13: value21
          key37: value21
          key44: value35
